gccida/g1/loop_optimize
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:919:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:919:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:920:4: error: expected ';' after expression
rtx v14; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:920:5: error: use of undeclared identifier 'v14'
rtx v14; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:927:4: error: expected ';' after expression
rtx j; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:927:5: error: use of undeclared identifier 'j'
rtx j; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:928:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:928:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:929:4: error: expected ';' after expression
rtx v23; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:929:5: error: use of undeclared identifier 'v23'
rtx v23; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:930:4: error: expected ';' after expression
rtx v24; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:930:5: error: use of undeclared identifier 'v24'
rtx v24; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:931:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:931:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:932:4: error: expected ';' after expression
rtx k; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:932:5: error: use of undeclared identifier 'k'
rtx k; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:934:4: error: expected ';' after expression
rtx m; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:934:5: error: use of undeclared identifier 'm'
rtx m; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/loop.c:951:4: error: expected ';' after expression
rtx i; // rbx 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/loop_optimize/src/obj/loop.o] Error 1
